examples/valid/test02.alice
x was a number of 10.

The looking-glass hatta ()
opened
  x said Alice and "\n" spoke.
  opened
    x was a number, x became 9 then x said Alice.
  closed
closed
