examples/invalid/test22.alice

The looking-glass hatta ()
opened 
  arr had 10 number then y was a number of 5,
  arr said Alice.
  arr became y.
closed
